tests/sksl/errors/ArrayTypeTooManyDimensionsInStructUnsized2.glsl
### Compilation failed:

error: 1: unsized arrays are not permitted here
struct S { float[2][] x; };
                   ^^
1 error
